# BitcoinUtxoVisualizer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  add_last_image_x_times.rb  blockreader.rb  buv.json  change_serializer.rb  colorize.rb  colormaps.rb  create_video.bat  create_video_with_legend.bat  density.rb  fetch_blockinfo.rb  generate_legend.rb  main.rb  utxo.rb  utxo_print_outputs.rb
_old/: README.md  add_legend.rb  create_video.bat
_old/dev/YoutubeCaptionCreator/: load_all_block_headers.rb
dev/BitcoinVisualizer/src/: main.cpp
dev/UtxoFetcher/: blockreader.rb  utxo.rb  utxo_to_change.rb
dev/YoutubeCaptionCreator/: DateToBlock.rb  create_sbt_file.rb  create_srt_file.rb
dev/YoutubeCaptionCreator/input/: 99bitcoins.com.json
doc/: analyzer.html  pixels.html
src/: CMakeLists.txt
src/cmake/: CMakeLists.txt
src/cpp/: .clang-format  Blk.h  BufferedStreamReader.h  CMakeLists.txt  Change.h  ColorMap.h  Density.h  DensityToImage.h  PixelSet.h  SocketStream.cpp  main.cpp  truncate.h
src/cpp/app/: BlockEncoder.cpp  BlockEncoder.h  BlockHeader.cpp  BlockHeader.h  BlockSerializer.cpp  BlockSerializer.h  Cfg.cpp  Cfg.h  Chunk.cpp  Chunk.h  FetchBlocks.cpp  Hud.cpp  Hud.h  Utxo.cpp  Utxo.h  UtxoV2.cpp  UtxoV2.h  Visualizer.cpp  check_blocks.cpp  decode_change.cpp  fetchAllBlockHashes.cpp  fetchAllBlockHashes.h  fetchAllBlockHeaders.cpp  fetchAllBlockHeaders.h  find_distant_color.cpp  forEachChange.h  loadAllBlockHashes.cpp  loadAllBlockHashes.h  load_all_block_headers.cpp  parse_block.cpp  show_block_changes.cpp  show_pixels_blocks.cpp  utxo_to_change.cpp
src/cpp/buv/: ColorMap.h  Density.h  DensityToImage.h  LinearFunction.h  PixelSet.h  PixelSetWithHistory.h  SatoshiBlockheightToPixel.h  SocketStream.cpp  SocketStream.h  truncate.h
src/cpp/unit/: BlockEncoderTest.cpp  BlockSerializerTest.cpp  ChunkTest.cpp  HexTest.cpp  OpenCVTest.cpp  ProgressBarTest.cpp  UtxoTest.cpp  VarIntTest.cpp  parallelToSequentialTest.cpp
src/cpp/util/: BinaryStreamReader.h  HttpClient.h  (+32 more)
src/rb/: append.rb  change_serializer.rb  create_all_blk.rb  parse_binary_block.rb  utxo_to_change.rb  varint.rb
(+24 files in other folders)
